--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/responsive.css">
 
 
 </head>
@@ -95,19 +96,24 @@
                             <p class="flavor"> lemon</p>
                             <img class="img-modal" src="/img/pastel-01.jpg" alt="">
                         </div>
-                      
-                        
+
+
                     </div>
                 </div>
 
             </div>
+
+
+           <div class="mailme">
+
+            <a class="waves-effect waves-light btn ">button</a></div>
 
             <div class="container section">
 
 
 
                 <div id="idModal" class="modal">
-                    <div class="modal-content mb-100">
+                    <div class="modal-content">
                         <h4>Modal Header</h4>
 
                         <div class="row">
@@ -115,9 +121,13 @@
                                 <img class="img-modal" src="/img/muffins-03.jpg" alt="">
                             </div>
                             <div class="col s6">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium minima ipsum optio nostrum quisquam assumenda exercitationem maxime commodi voluptas nemo quidem, neque earum consequuntur officia odit itaque obcaecati excepturi aspernatur.</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium minima ipsum
+                                    optio nostrum quisquam assumenda exercitationem maxime commodi voluptas nemo quidem,
+                                    neque earum consequuntur officia odit itaque obcaecati excepturi aspernatur.</p>
                                 <br>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit amet modi, nesciunt, at, sed quis dolores eum qui adipisci iste consectetur voluptas molestiae nobis ex accusamus eveniet necessitatibus architecto? Ea.</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit amet modi, nesciunt,
+                                    at, sed quis dolores eum qui adipisci iste consectetur voluptas molestiae nobis ex
+                                    accusamus eveniet necessitatibus architecto? Ea.</p>
                             </div>
                         </div>
                     </div>
@@ -134,9 +144,13 @@
                                 <img class="img-modal" src="/img/muffins-02.jpg" alt="">
                             </div>
                             <div class="col s6">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium minima ipsum optio nostrum quisquam assumenda exercitationem maxime commodi voluptas nemo quidem, neque earum consequuntur officia odit itaque obcaecati excepturi aspernatur.</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium minima ipsum
+                                    optio nostrum quisquam assumenda exercitationem maxime commodi voluptas nemo quidem,
+                                    neque earum consequuntur officia odit itaque obcaecati excepturi aspernatur.</p>
                                 <br>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit amet modi, nesciunt, at, sed quis dolores eum qui adipisci iste consectetur voluptas molestiae nobis ex accusamus eveniet necessitatibus architecto? Ea.</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit amet modi, nesciunt,
+                                    at, sed quis dolores eum qui adipisci iste consectetur voluptas molestiae nobis ex
+                                    accusamus eveniet necessitatibus architecto? Ea.</p>
                             </div>
                         </div>
                     </div>
