--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             </a>
                             <div class="line"></div>
                             <p class="flavor"> lemon</p>
-                            <img class="img-modal" src="/img/muffins-02.jpg" alt="">
+                            <img class="img-modal" src="/img/pastel-01.jpg" alt="">
                         </div>
                         <div class="carousel-item center">
                             <a class="modal-trigger" href="#idModal">
@@ -104,60 +104,34 @@
             </div>
 
 
-           <div class="mailme">
-
-            <a class="waves-effect waves-light btn ">button</a></div>
-
             <div class="container section">
 
 
 
                 <div id="idModal" class="modal">
                     <div class="modal-content">
-                        <h4>Modal Header</h4>
+                        <h4 class="subtitle-modal">Modal Header</h4>
 
                         <div class="row">
                             <div class="col s6">
                                 <img class="img-modal" src="/img/muffins-03.jpg" alt="">
                             </div>
-                            <div class="col s6">
+                            <div class="description col s6">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium minima ipsum
                                     optio nostrum quisquam assumenda exercitationem maxime commodi voluptas nemo quidem,
                                     neque earum consequuntur officia odit itaque obcaecati excepturi aspernatur.</p>
                                 <br>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit amet modi, nesciunt,
-                                    at, sed quis dolores eum qui adipisci iste consectetur voluptas molestiae nobis ex
                                     accusamus eveniet necessitatibus architecto? Ea.</p>
                             </div>
                         </div>
-                    </div>
-                    <div class="modal-footer">
-                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
-                    </div>
-                </div>
-                <div id="idModal2" class="modal">
-                    <div class="modal-content mb-100">
-                        <h4>Modal Header</h4>
 
-                        <div class="row">
-                            <div class="col s6">
-                                <img class="img-modal" src="/img/muffins-02.jpg" alt="">
-                            </div>
-                            <div class="col s6">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium minima ipsum
-                                    optio nostrum quisquam assumenda exercitationem maxime commodi voluptas nemo quidem,
-                                    neque earum consequuntur officia odit itaque obcaecati excepturi aspernatur.</p>
-                                <br>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit amet modi, nesciunt,
-                                    at, sed quis dolores eum qui adipisci iste consectetur voluptas molestiae nobis ex
-                                    accusamus eveniet necessitatibus architecto? Ea.</p>
-                            </div>
-                        </div>
                     </div>
-                    <div class="modal-footer">
+                    <div class="modal-footer  py-0">
                         <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
                     </div>
                 </div>
+              
 
             </div>
 
