--- a/index.html
+++ b/index.html
@@ -20,13 +20,20 @@
     <link rel="stylesheet" href="css/responsive.css">
 
 
+
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+
+    <link  rel="shortcut icon" href="/img/1x/favicon.ico" type="image/x-icon"/>
+
+
 </head>
 
 <body>
 
-    <section class="logoo">
+    <div class="conteiner">
+        <section class="logoo">
 
-        <div class="container">
+
             <div class="row">
                 <div class="col s12 center-align">
                     <div class=" centerlogo">
@@ -34,22 +41,22 @@
                     </div>
                 </div>
             </div>
-        </div>
-
-    </section>
 
 
+        </section>
 
 
 
 
-    <h1 class="center-align title"> ¿Qué te gustaría?</h1>
+
+
+        <h1 class="center-align title"> ¿Qué se te antoja?</h1>
 
 
 
-    <section class="menu">
+        <section class="menu">
 
-        <div class="conteiner">
+
 
 
             <div class="row">
@@ -65,12 +72,12 @@
                             <img class="img-modal" src="/img/pastel-01.jpg" alt="">
                         </div>
                         <div class="carousel-item center">
-                            <a class="modal-trigger" href="#idModal2">
+                            <a class="modal-trigger" href="#idModal">
                                 <h2 class="subtitle">LemoOON</h2>
                             </a>
                             <div class="line"></div>
                             <p class="flavor"> lemon</p>
-                            <img class="img-modal" src="/img/pastel-01.jpg" alt="">
+                            <img class="img-modal2" src="/img/muffins-01.jpg" alt="">
                         </div>
                         <div class="carousel-item center">
                             <a class="modal-trigger" href="#idModal">
@@ -78,7 +85,7 @@
                             </a>
                             <div class="line"></div>
                             <p class="flavor"> lemon</p>
-                            <img class="img-modal" src="/img/pastel-01.jpg" alt="">
+                            <img class="img-modal" src="/img/dona-01.jpg" alt="">
                         </div>
                         <div class="carousel-item center">
                             <a class="modal-trigger" href="#idModal">
@@ -86,7 +93,7 @@
                             </a>
                             <div class="line"></div>
                             <p class="flavor"> lemon</p>
-                            <img class="img-modal" src="/img/pastel-01.jpg" alt="">
+                            <img class="img-modal" src="/img/pastel-02.jpg" alt="">
                         </div>
                         <div class="carousel-item center">
                             <a class="modal-trigger" href="#idModal">
@@ -94,7 +101,7 @@
                             </a>
                             <div class="line"></div>
                             <p class="flavor"> lemon</p>
-                            <img class="img-modal" src="/img/pastel-01.jpg" alt="">
+                            <img class="img-modal" src="/img/muffins-03.jpg" alt="">
                         </div>
 
 
@@ -103,44 +110,66 @@
 
             </div>
 
+            <br>
+            <br>
 
-            <div class="container section">
+            <div class="row">
 
 
+                <div class="col s12 center-align ">
 
-                <div id="idModal" class="modal">
-                    <div class="modal-content">
-                        <h4 class="subtitle-modal">Modal Header</h4>
 
-                        <div class="row">
-                            <div class="col s6">
-                                <img class="img-modal" src="/img/muffins-03.jpg" alt="">
-                            </div>
-                            <div class="description col s6">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium minima ipsum
-                                    optio nostrum quisquam assumenda exercitationem maxime commodi voluptas nemo quidem,
-                                    neque earum consequuntur officia odit itaque obcaecati excepturi aspernatur.</p>
-                                <br>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit amet modi, nesciunt,
-                                    accusamus eveniet necessitatibus architecto? Ea.</p>
-                            </div>
-                        </div>
+                    <div class="social-media py-3">
+                        <a href="#" class="social-media-icon" target="_blank">
+                            <i class='bx bxl-instagram'></i>
+                        </a>
+                        <a href="#" class="social-media-icon" target="_blank">
+                            <i class='bx bxl-twitter'></i>
+                        </a>
+                        <a href="#" class="social-media-icon" target="_blank">
+                            <i class='bx bxl-whatsapp'></i>
+                        </a>
 
                     </div>
-                    <div class="modal-footer  py-0">
-                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
-                    </div>
+
                 </div>
-              
-
             </div>
 
 
 
 
-        </div>
-    </section>
 
+            <div id="idModal" class="modal">
+                <div class="modal-content">
+                    <h4 class="subtitle-modal">Modal Header</h4>
+
+                    <div class="row">
+                        <div class="col s12 m6 l6">
+                            <img class="responsive-img" src="/img/muffins-03.jpg" alt="">
+                        </div>
+                        <div class="description col s12 m6 l6">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium minima ipsum
+                                optio nostrum quisquam assumenda exercitationem maxime commodi voluptas nemo quidem,
+                                neque earum consequuntur officia odit itaque obcaecati excepturi aspernatur.</p>
+
+                        </div>
+                    </div>
+
+                </div>
+                <div class="modal-footer  py-0">
+                    <a href="#!" class="modal-close waves-effect waves-green btn-flat">Cerrar</a>
+                </div>
+            </div>
+
+
+
+
+
+
+
+
+        </section>
+    </div>
 
 
     <!-- JavaScript -->
