--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                         <div class="description col s12 m6 l6">
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium minima ipsum
                                 optio nostrum quisquam assumenda exercitationem maxime commodi voluptas nemo quidem,
-                                neque earum consequuntur officia odit itaque obcaecati excepturi aspernatur.</p>
+                                neque earum consequuntur officia odit itaque obcaecati excepturicoño aspernatur.</p>
 
                         </div>
                     </div>
