--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 
     <link  rel="shortcut icon" href="/img/1x/favicon.ico" type="image/x-icon"/>
 
+    <!-- <a href="#"><img src="/img/718 [Convertido].png" /></a> -->
+
 
 </head>
 
@@ -129,6 +131,12 @@
                         <a href="#" class="social-media-icon" target="_blank">
                             <i class='bx bxl-whatsapp'></i>
                         </a>
+
+
+                        <br>
+                        <br>
+                        
+                        <a href="https://www.linkedin.com/in/marco-astudillo91/" target="_blank" class="foot"><small>&copy; Todos los derechos reservados</small></a>
 
                     </div>
 
