--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Caompatible" content="ie=edge">
     <title>Dos De Chocolate</title>
+    <meta property="og:title" content="Servicios de pasteletia -  Ing. Marco Astudillo" />
+    <meta property="og:description" content="Web Site adaptable a cualquier dispositivo." />	  <meta property="og:description" content="Ingenieria, Diseño y Tecnología" />
+  
+    <meta property="og:image" content=" https://arquicwebservices.herokuapp.com/img/c2.jpg" />
 
 
     <!-- Fonts -->
