--- a/src/public/index.html
+++ b/src/public/index.html
@@ -7,10 +7,11 @@
     <meta http-equiv="X-UA-Caompatible" content="ie=edge">
     <title>Dos De Chocolate</title>
     <meta property="og:title" content="Servicios de pasteletia -  Ing. Marco Astudillo" />
-    <meta property="og:description" content="Web Site adaptable a cualquier dispositivo." />	  <meta property="og:description" content="Ingenieria, Diseño y Tecnología" />
+    <meta property="og:description" content="Web Site adaptable a cualquier dispositivo." />	
+    <meta property="og:description" content="Ingenieria, Diseño y Tecnología" />
+    <meta property="og:image" content="https://arquicwebservices.herokuapp.com/img/c2.jpg"/>
   
-    <meta property="og:image" content=" https://arquicwebservices.herokuapp.com/img/c2.jpg" />
-
+    
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Raleway:500,600&display=swap" rel="stylesheet">
